--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   shared_preferences: ^2.1.1
+  share_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
