--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.1
   share_plus: ^7.0.0
+  xml: ^6.3.0
+  file_picker: ^5.3.0
+  collection: any
 
 dev_dependencies:
   flutter_test:
