--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
    <application
-        android:label="bird_tracker"
+        android:label="Bird Tracker"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="YOUR_API_KEY"/>
+           android:value="AIzaSyCo43xAvWkLQWSytU8xy9IHjfjtuajdp9Y"/>
        <activity
             android:name=".MainActivity"
             android:exported="true"
