--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  isar_generator: ^3.1.0
-  build_runner: ^2.3.3
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
