--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   location: ^4.4.0
   flutter_svg: ^2.0.5
   flutter_speed_dial: ^6.2.0
-  isar: ^3.1.0
+  isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0
   path_provider: ^2.0.14
   context_holder: ^0.0.5
