--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+7
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.3.0 <3.4.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,21 +34,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.2.5
-  location: ^4.4.0
-  flutter_svg: ^2.0.5
-  flutter_speed_dial: ^6.2.0
+  cupertino_icons: ^1.0.6
+  google_maps_flutter: ^2.6.0
+  location: ^5.0.3
+  flutter_svg: ^2.0.10+1
+  flutter_speed_dial: ^7.0.0
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0
-  path_provider: ^2.0.14
+  path_provider: ^2.1.2
   context_holder: ^0.0.5
-  intl: ^0.18.1
-  provider: ^6.0.5
-  shared_preferences: ^2.1.1
-  share_plus: ^7.0.0
-  xml: ^6.3.0
-  file_picker: ^5.3.0
+  intl: ^0.19.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.2
+  share_plus: ^8.0.2
+  xml: ^6.5.0
+  file_picker: ^8.0.0+1
   collection: any
 
 dev_dependencies:
@@ -60,9 +60,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   isar_generator: ^3.1.0+1
-  build_runner: ^2.4.4
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
