--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bird_tracker
+name: ciconia_tracker
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   google_maps_flutter: ^2.6.0
-  location: ^5.0.3
+  location: ^6.0.1
+  easy_localization: ^3.0.5
   flutter_svg: ^2.0.10+1
   flutter_speed_dial: ^7.0.0
   isar: ^3.1.0+1
@@ -64,6 +65,9 @@ dev_dependencies:
   isar_generator: ^3.1.0+1
   build_runner: ^2.4.8
 
+dependency_overrides:
+  intl: ^0.19.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -79,6 +83,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
